[package]
name = "pi_apm"
version = "0.1.5"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2021"
description = "pi_apm"
repository = "https://github.com/GaiaWorld/pi_apm"
license = "MIT OR Apache-2.0"
keywords = ["pi",  "apm"]

[dependencies]
fnv = "1.0"
sysinfo = "0.27"
netstat2 = "0.9"
backtrace = "0.3"
lazy_static = "1.4"
parking_lot = "0.12"
crossbeam-queue = "0.1"
atom = {version = "0.5", package = "pi_atom"}

[target.'cfg(unix)'.dependencies]
libc = "0.2"
psutil = "1.7"
walkdir = "2.2"